--- a/index.html
+++ b/index.html
@@ -69,12 +69,6 @@
 						<a class="nav-link js-scroll-trigger" href="#portfolio">Our School</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link js-scroll-trigger" href="#testimonials">Testimonials</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link js-scroll-trigger" href="#blog">News</a>
-					</li>
-					<li class="nav-item">
 						<a class="nav-link js-scroll-trigger" href="#contact">Contact Us</a>
 					</li>
 				</ul>
@@ -331,7 +325,7 @@
 						<button class="btn-new from-middle animated" data-filter=".gal_b">Goggas (Insects)</button>
 						<button class="btn-new from-middle animated" data-filter=".gal_c">Diere (Animals)</button>
 						<button class="btn-new from-middle animated" data-filter=".gal_d">Play Grounds</button>
-						<button class="btn-new from-middle animated" data-filter=".gal_e">Painting On The Wall</button>
+						<button class="btn-new from-middle animated" data-filter=".gal_e">Other</button>
 					</div>
 				</div>
 			</div>
@@ -970,137 +964,11 @@
 						</div>
 					</div>
 				</div>
-
-
 			</div>
 		</div>
 	</div>
-	</div>
 
-	<div id="testimonials" class="section wb">
-		<div class="container">
-			<div class="section-title text-center">
-				<h3>Testimonials</h3>
-				<p>Thank you for your feedback. Below, you will find a selection of the feedback received.</p>
-			</div><!-- end title -->
 
-			<div class="row">
-				<div class="col-md-12 col-sm-12">
-					<div class="testi-carousel owl-carousel owl-theme">
-						<div class="testimonial clearfix">
-							<div class="desc">
-								<h3>All rounder day care centre</h3>
-								<p class="lead">
-									I am writing to express my gratitude for the exceptional care and education that you provide to
-									pre-school children at your center.
-								</p>
-								<sub class="text-right">
-									<h4>Wim</h4>
-								</sub>
-							</div>
-						</div>
-						<!-- end testimonial -->
-
-						<div class="testimonial clearfix">
-							<div class="desc">
-								<h3> Awesome Services!</h3>
-								<p class="lead">
-									I am writing to express my heartfelt gratitude for the excellent services that you provide to
-									pre-school children.
-								</p>
-								<sub class="text-right">
-									<h4>Hanie</h4>
-								</sub>
-							</div>
-						</div>
-						<!-- end testimonial -->
-
-						<div class="testimonial clearfix">
-							<div class="desc">
-								<h3>Great & Talented Team!</h3>
-								<p class="lead">
-									Please extend my appreciation to your entire team for their hard work, dedication, and commitment to
-									excellence. Their tireless efforts do not go unnoticed and are greatly appreciated.
-								</p>
-								<sub class="text-right">
-									<h4>James</h4>
-								</sub>
-							</div>
-						</div><!-- end testimonial -->
-					</div><!-- end carousel -->
-				</div><!-- end col -->
-			</div><!-- end row -->
-		</div><!-- end container -->
-	</div><!-- end section -->
-
-	<div id="blog" class="section lb">
-		<div class="container">
-			<div class="section-title text-center">
-				<h3>Latest News</h3>
-				<p>
-					This section on your website provides visitors with the most recent and up-to-date information on
-					upcoming events at the school. This section is constantly updated with breaking news, events, and important
-					announcements.
-				</p>
-			</div><!-- end title -->
-
-			<div class="row">
-				<div class="col-md-4 col-sm-6 col-lg-4">
-					<figure class="snip1401">
-						<img src="image/col/web/col1.jpg" alt="" />
-						<figcaption>
-							<h3>Photo Day - Tomorrow</h3>
-							<p>
-								Don't forget to send appropriate clothing for your toddler to wear during the photo session.
-							</p>
-							<ul>
-								<li>Updated</li>
-								<li>31 Jan 23</li>
-							</ul>
-						</figcaption>
-						<i class="ion-ios-home-outline"></i>
-						<a href="#"></a>
-					</figure>
-				</div>
-
-				<div class="col-md-4 col-sm-6 col-lg-4">
-					<figure class="snip1401 hover">
-						<img src="image/col/web/col2.jpg" alt="" />
-						<figcaption>
-							<h3>Mud play -<br /> 31 Feb 23</h3>
-							<p>
-								Don't forget to send old cloths for your toddler to wear during the mud play session.
-							</p>
-							<ul>
-								<li>Updated</li>
-								<li>01 Feb 23</li>
-							</ul>
-						</figcaption>
-						<i class="ion-ios-home-outline"></i>
-						<a href="#"></a>
-					</figure>
-				</div>
-
-				<div class="col-md-4 col-sm-6 col-lg-4">
-					<figure class="snip1401">
-						<img src="image/col/web/col3.jpg" alt="" />
-						<figcaption>
-							<h3>Valentine&apos;s Day</h3>
-							<p>
-								Don't forget to dress your toddler in red.
-							</p>
-							<ul>
-								<li>Updated</li>
-								<li>1 Feb 23</li>
-							</ul>
-						</figcaption>
-						<i class="ion-ios-home-outline"></i>
-						<a href="#"></a>
-					</figure>
-				</div>
-			</div>
-		</div>
-	</div>
 
 	<div id="contact" class="section db">
 		<div class="container">
@@ -1110,7 +978,7 @@
 					For any queries, compliments or general info requests, please complete the below form and we will get back to
 					you as soon as possible.
 				</p>
-			</div><!-- end title -->
+			</div>
 
 			<div class="row">
 				<div class="col-md-12">
@@ -1182,7 +1050,7 @@
 	<script src="js/animated-slider.js"></script>
 	<!-- Contact form JavaScript -->
 	<script src="js/jqBootstrapValidation.js"></script>
-	<script src="js/contact_me.js"></script>
+	<!-- <script src="js/contact_me.js"></script> -->
 	<!-- ALL PLUGINS -->
 	<script src="js/custom.js"></script>
 </body>
