--- a/index.html
+++ b/index.html
@@ -1010,7 +1010,6 @@
 					</div>
 				</div>
 
-
 				<!-- photos of the play grounds  -->
 				<div class="col-md-4 col-sm-6 gallery-grid gal_d">
 					<div class="gallery-single spi-hr fix">
@@ -1525,7 +1524,11 @@
 					<p class="footer-company-name">
 						All Rights Reserved. &copy; 2022 - 2023 - Goggaliefies
 						<br />
-						<b><a href="https://lesawi.co.za/#contact">A Lesawi Services Product</a></b>
+						<b style="text-decoration: underline">
+							<a href="https://lesawi.co.za/#contact">
+								A Lesawi Services Product
+							</a>
+						</b>
 					</p>
 				</div>
 			</div>
@@ -1544,7 +1547,7 @@
 	<script src="js/animated-slider.js"></script>
 	<!-- Contact form JavaScript -->
 	<script src="js/jqBootstrapValidation.js"></script>
-	<!-- <script src="js/contact_me.js"></script> -->
+	<script src="js/contact_me.js"></script>
 	<!-- ALL PLUGINS -->
 	<script src="js/custom.js"></script>
 </body>
