--- a/index.html
+++ b/index.html
@@ -1,32 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- Basic -->
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<head>
+	<!-- Basic -->
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-<!-- Mobile Metas -->
-<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+	<!-- Mobile Metas -->
+	<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-<!-- Site Metas -->
-<title>Goggaliefies - Exclusive Daycare centre</title>
-<meta name="keywords"
-	content="Day care, day care centre, exclusive day care, toddlers, babies, White river, Plaston, Nelspruit,">
-<meta name="description" content="Exclusive day care centre in White River/Nelspruit area">
-<meta name="author" content="Wim von Benecke, 061 525 0362, info@lesawi.co.za, www.lesawi.co.za">
+	<!-- Site Metas -->
+	<title>Goggaliefies - Exclusive Daycare centre</title>
+	<meta name="keywords"
+		content="day care, creche, day care centre, exclusive day care, toddlers, babies, white river, plaston, nelspruit, mbombela">
+	<meta name="description" content="Exclusive day care centre in White River/Nelspruit area">
+	<meta name="author" content="Wim von Benecke, 061 525 0362, info@lesawi.co.za, www.lesawi.co.za">
 
-<!-- Site Icons -->
-<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
-<link rel="apple-touch-icon" href="images/apple-touch-icon.png">
-<!-- Bootstrap CSS -->
-<link rel="stylesheet" href="css/bootstrap.min.css">
-<!-- Site CSS -->
-<link rel="stylesheet" href="style.css">
-<!-- Responsive CSS -->
-<link rel="stylesheet" href="css/responsive.css">
-<!-- Custom CSS -->
-<link rel="stylesheet" href="css/custom.css">
-<script src="js/modernizr.js"></script> <!-- Modernizr -->
+	<!-- Site Icons -->
+	<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
+	<link rel="apple-touch-icon" href="images/apple-touch-icon.png">
+	<!-- Bootstrap CSS -->
+	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<!-- Site CSS -->
+	<link rel="stylesheet" href="style.css">
+	<!-- Responsive CSS -->
+	<link rel="stylesheet" href="css/responsive.css">
+	<!-- Custom CSS -->
+	<link rel="stylesheet" href="css/custom.css">
+	<script src="js/modernizr.js"></script> <!-- Modernizr -->
 </head>
 
 <body id="page-top" class="politics_version">
@@ -97,7 +98,7 @@
 				</div>
 			</div>
 
-			<div class="ct-header tablex item" data-background="image/schoolFront.jpg">
+			<div class="ct-header tablex item" data-background="image/school/web/schoolFront750.jpg">
 				<div class="ct-u-display-tablex">
 					<div class="inner">
 						<div class="container">
@@ -170,7 +171,7 @@
 
 				<div class="col-md-6">
 					<div class="right-box-pro wow fadeIn">
-						<img src="image/schoolFront.jpg" alt="" class="img-fluid img-rounded fat-ab">
+						<img src="image/school/web/schoolFront750.jpg" alt="" class="img-fluid img-rounded fat-ab">
 					</div><!-- end media -->
 				</div><!-- end col -->
 			</div><!-- end row -->
@@ -308,6 +309,7 @@
 				</div><!-- end col -->
 			</div><!-- end row -->
 		</div><!-- end container -->
+		<div class="text-center"><a class="btn-new from-middle animated" href="#contact">Contact Us</a></div>
 	</div><!-- end section -->
 
 	<div id="portfolio" class="section lb">
@@ -524,7 +526,6 @@
 						</div>
 					</div>
 				</div>
-
 
 				<!-- photos of the goggas class  -->
 				<div class="col-md-4 col-sm-6 gallery-grid gal_b">
@@ -1458,10 +1459,9 @@
 					</div>
 				</div>
 			</div>
+			<div class="text-center"><a class="btn-new from-middle animated" href="#contact">Contact Us</a></div>
 		</div>
 	</div>
-
-
 
 	<div id="contact" class="section db">
 		<div class="container">
