--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 	<div id="home" class="ct-header ct-header--slider ct-slick-custom-dots">
 		<div class="ct-slick-homepage" data-arrows="true" data-autoplay="false">
 
-			<div class="ct-header tablex item" data-background="image/schoolFront.jpg">
+			<div class="ct-header tablex item" data-background="image/school/web/schoolFront750.jpg">
 				<div class="ct-u-display-tablex">
 					<div class="inner">
 						<div class="container">
@@ -116,7 +116,7 @@
 				</div>
 			</div>
 
-			<div class="ct-header tablex item" data-background="image/schoolFront.jpg">
+			<div class="ct-header tablex item" data-background="image/school/web/schoolFront750.jpg">
 				<div class="ct-u-display-tablex">
 					<div class="inner">
 						<div class="container">
