--- a/index.html
+++ b/index.html
@@ -177,9 +177,8 @@
 			</div><!-- end row -->
 			<br />
 			<p>
-				In addition to our comprehensive curriculum, we offer optional extra-curricular activities in the morning,
-				such as Playball for children aged 2.5 to 5 years old, to aid in their growth and development. We also
-				host regular educational outings and "special days" to enhance the educational program.
+				In addition to our comprehensive curriculum, we offer optional extra-curricular activities
+				such as Playball for children, to aid in their growth and development.
 				We believe in fostering a friendly and caring community, where children develop empathy and kindness
 				towards their friends and those around them. We strive to prepare children to be responsible members of
 				their community, equipped with the necessary social and academic skills for success in the future. Our aim
@@ -189,9 +188,8 @@
 			<p>
 				At Goggaliefies Day Care Centre, traditional values and manners are emphasized, promoting children to be
 				polite and courteous members of the school community. We also keep you informed and up-to-date through
-				parent meetings and reports and provide opportunities for social get-togethers. Our goal is to provide a
-				warm, nurturing environment for children to learn and grow, and to be a leader in early childhood
-				education.
+				parent meetings and reports. Our goal is to provide a warm, nurturing environment for children to learn and
+				grow, and to be a leader in early childhood education.
 			</p>
 			<div class="text-center"><a class="btn-new from-middle animated" href="#contact">Contact Us</a></div>
 		</div><!-- end container -->
