--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
 						<h2>About Goggaliefies</h2>
 						<p>
 							Goggaliefies Day Care Centre is a top-notch early childhood education facility that operates from Monday
-							to Friday, from 6:30am to 5:30pm. Our experienced team of caregivers, led by Me. Larne, is dedicated to
-							providing a well-rounded education for children aged 2 to 4 years old.
+							to Friday, from 6:30am to 5:30pm for children aged 0 to 4. Our experienced team of caregivers, led by Me.
+							Larne, is dedicated to providing a well-rounded education for children aged 18 months to 4 years old.
 						</p>
 						<p>
 							Our curriculum focuses on all areas of a child's development, including social, emotional, physical, and
