--- a/index.html
+++ b/index.html
@@ -314,7 +314,9 @@
 		<div class="container">
 			<div class="section-title text-center">
 				<h3>Our school</h3>
-				<p>Quisque eget nisl id nulla sagittis auctor quis id. Aliquam quis vehicula enim, non aliquam risus.</p>
+				<p>
+					Below are photos of our school. You can click on any of the tabs below to see only specific photos.
+				</p>
 			</div><!-- end title -->
 
 			<div class="gallery-menu text-center row">
