--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		content="day care, creche, day care centre, exclusive day care, toddlers, babies, white river, plaston, nelspruit, mbombela">
 	<meta name="description" content="Exclusive day care centre in White River/Nelspruit area">
 	<meta name="author" content="Wim von Benecke, 061 525 0362, info@lesawi.co.za, www.lesawi.co.za">
-
+	<link rel="canonical" href="https://www.goggaliefies.co.za/" />
 	<!-- Site Icons -->
 	<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
 	<link rel="apple-touch-icon" href="images/apple-touch-icon.png">
@@ -27,6 +27,7 @@
 	<link rel="stylesheet" href="css/responsive.css">
 	<!-- Custom CSS -->
 	<link rel="stylesheet" href="css/custom.css">
+	<link rel="icon" href="/image/Bytjie.ico" />
 	<script src="js/modernizr.js"></script> <!-- Modernizr -->
 </head>
 
